add commenting system with giscus

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,26 @@ sass:
 #exclude: ['/misc']
 
 # ---------
+# GISCUS COMMENTS
+# Powered by GitHub Discussions - https://giscus.app/
+# To set up:
+# 1. Enable Discussions on your GitHub repository
+# 2. Install the Giscus app: https://github.com/apps/giscus
+# 3. Get your repo_id and category_id from https://giscus.app/
+# ---------
+giscus:
+    repo: "hubertklonowski/agentic-madness"
+    repo_id: "R_kgDOQq8Bgg"
+    category: "General"
+    category_id: "DIC_kwDOQq8Bgs4C03QQ"
+    mapping: "title"
+    strict: "1"
+    reactions_enabled: "1"
+    emit_metadata: "1"
+    input_position: "top"
+    theme: "preferred_color_scheme"
+    lang: "en"
+# ---------
 # LIBDOC CONFIGURATION
 # https://olivier3lanc.github.io/Jekyll-LibDoc/libdoc-config.html
 # ---------
